--- a/ui/addbooksdialog.ui
+++ b/ui/addbooksdialog.ui
@@ -26,7 +26,7 @@
    <string>Add Books</string>
   </property>
   <property name="windowIcon">
-   <iconset resource="images.qrc">
+   <iconset resource="../resources/images.qrc">
     <normaloff>:/icons/books_icon.png</normaloff>:/icons/books_icon.png</iconset>
   </property>
   <widget class="QPushButton" name="buttonAdd">
@@ -160,7 +160,7 @@
   <tabstop>buttonClose</tabstop>
  </tabstops>
  <resources>
-  <include location="images.qrc"/>
+  <include location="../resources/images.qrc"/>
  </resources>
  <connections/>
 </ui>
