--- a/resources/images.qrc
+++ b/resources/images.qrc
@@ -124,5 +124,6 @@
         <file>icons/grid_icon.png</file>
         <file>icons/reduce_icon.png</file>
         <file>icons/expand_icon.png</file>
+        <file>icons/hide_grid_icon.png</file>
     </qresource>
 </RCC>
